--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
